--- a/static/style/estilo.css
+++ b/static/style/estilo.css
@@ -41,23 +41,27 @@ footer .extra-info p {
 
 body {
     background-image: url('https://i.postimg.cc/Wz5SK3RN/logo.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-size: auto 100%; /* Mantiene el tamaño original de la imagen y ajusta la altura */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-attachment: fixed; /* Mantiene la imagen fija mientras se hace scroll */
 }
 
+
+
 .letters {
-    width: 600px; /* Ajusta el tamaño de las letras */
+    width: 500px; /* Ajusta el tamaño de las letras */
     margin: 0 auto; /* Centra el contenedor */
     display: block; /* Asegura que se comporte como un bloque para centrarlo */
     animation: glow 4s infinite alternate; /* Aplica la animación */
+    margin-left: 305px;
     
 }
 
 /* Animación de brillo */
 @keyframes glow {
     0% {
-        filter: brightness(2) drop-shadow(0 0 15px rgb(255, 255, 255)); /* Brillo alto */
+        filter: brightness(2) drop-shadow(0 0 500px rgb(255, 255, 255)); /* Brillo alto */
     }
 
 }
@@ -150,7 +154,9 @@ body {
     font-size: 2rem; /* Ajusta el tamaño de las letras a un valor mucho mayor */
 }
 
-
+.form-container {
+    margin-left: 100px;
+}
 
 
 
